--- a/examples/counter/components/components.templ
+++ b/examples/counter/components/components.templ
@@ -11,7 +11,7 @@ css border() {
 }
 
 templ counts(global, session int) {
-	<form id="countsForm" action="/" method="POST" hx-post="/" hx-select="#countsForm">
+	<form id="countsForm" action="/" method="POST" hx-post="/" hx-select="#countsForm" hx-swap="outerHTML">
 		<div class="columns">
 			<div class={ "column", "has-text-centered", "is-primary", border }>
 				<h1 class="title is-size-1 has-text-centered">{ strconv.Itoa(global) }</h1>
@@ -51,9 +51,7 @@ templ Page(global, session int) {
 			<section class="section">
 				<div class="container">
 					<div class="columns is-centered">
-						<div class="column is-half">
-							@counts(global, session)
-						</div>
+						<div class="column is-half">@counts(global, session)</div>
 					</div>
 				</div>
 			</section>
