fix(#108): ensure void elements have CSS and script attributes pre-processed

--- a/generator/test-css-usage/template.templ
+++ b/generator/test-css-usage/template.templ
@@ -23,6 +23,7 @@ templ MapCSSExample() {
 
 templ KVExample() {
 	<div class={ "a", templ.KV("b", false) }></div>
+	<input type="email" id="email" name="email" class={ "a", "b", "c", templ.KV("c", false) } placeholder="your@email.com" autocomplete="off"/>
 }
 
 templ ThreeButtons() {
