fix: replace new lines in constant attributes with escaped new lines (#124)

--- a/generator/test-element-attributes/template.templ
+++ b/generator/test-element-attributes/template.templ
@@ -26,5 +26,8 @@ templ render(p person) {
 			class={ unimportant }
 		}
 		>Else</div>
+	<div data-script="on click
+                do something
+             end"></div>
 }
 
