fix(#131): do not sanitize constant CSS properties within CSS templates

--- a/generator/test-css-expression/template.templ
+++ b/generator/test-css-expression/template.templ
@@ -2,6 +2,7 @@ package testcssexpression
 
 css className() {
 	background-color: #ffffff;
+	max-height: calc(100vh - 170px);
 	color: { red };
 }
 
